Fix annotation layer position and panel collapse

--- a/web_client/stylesheets/layout/visualization.styl
+++ b/web_client/stylesheets/layout/visualization.styl
@@ -8,7 +8,7 @@
         right 0
         margin-right 5px
 
-    .h-visualization-body,.h-annotation-layers
+    .h-visualization-body
         position relative
         top 0
         left 0
@@ -22,3 +22,8 @@
         height 100%
         width 100%
         pointer-events none
+
+        svg
+            position absolute
+            top 0
+            left 0
